--- a/mcqmaster/package.json
+++ b/mcqmaster/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-awesome-countdown": "^1.0.16",
+    "vue-router": "^3.0.7",
+    "vuetify": "^1.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
